main/default/objects/Log__c/fields/Callout_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Callout_Endpoint__c</fullName>
    <description>This field denotes the value of a triggered transaction's endpoint.</description>
    <label>Callout Endpoint</label>
    <type>TextArea</type>
</CustomField>