main/default/objects/Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>This field captures the value of the error code from the Integration in case of a failure.</description>
    <label>Error Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>