main/default/objects/Log__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>This field stores the callout Http Method for the integration.</description>
    <label>Http Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>