main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Log level</description>
    <label>Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>