main/default/objects/Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>The response while making a callout.</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>