main/default/objects/Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Id of the current user.</description>
    <label>User ID</label>
    <type>TextArea</type>
</CustomField>